--- a/css/main.css
+++ b/css/main.css
@@ -133,12 +133,43 @@ body {
 
 .section-cart__header {
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .title-1 {
   font-size: 28px;
   font-weight: 700;
   line-height: 1.3;
+}
+
+.cart-header {
+  display: grid;
+  grid-template-columns: 2fr 3fr 3fr 3fr 1fr;
+  padding: 22px 0;
+  background-color: #eaeff2;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1.2;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
+
+.cart-header__title {
+  grid-column-start: 2;
+}
+
+.cart-footer {
+  display: grid;
+  grid-template-columns: 5fr 3fr 4fr;
+  padding: 19px 0;
+  background-color: #eaeff2;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.cart-footer__count {
+  grid-column-start: 2;
 }
 
 /*# sourceMappingURL=main.css.map */
