--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,7 @@
 
 //Bloks
 @import "./blocks/section-cart";
-@import "./blocks/title";
+@import "./blocks/titles";
+@import "./blocks/cart-header";
+@import "./blocks/product";
+@import "./blocks/cart-footer";
