--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,22 @@ body {
   grid-column-start: 2;
 }
 
+.product {
+  display: grid;
+  grid-template-columns: 2fr 3fr 3fr 3fr 1fr;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.product > * {
+  align-self: center;
+}
+
+.product__img {
+  justify-self: center;
+}
+
 .cart-footer {
   display: grid;
   grid-template-columns: 5fr 3fr 4fr;
