final layout commit the next step is adaptation

--- a/sass/blocks/_cart-header.scss
+++ b/sass/blocks/_cart-header.scss
@@ -1,6 +1,7 @@
 .cart-header {
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 3fr 1fr;
+  column-gap: 30px;
 
   padding: 22px 0;
   background-color: #eaeff2;
