--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ body {
 }
 
 .container {
-  width: 1140px;
+  max-width: 1140px;
   padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
@@ -145,6 +145,7 @@ body {
 .cart-header {
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 3fr 1fr;
+  column-gap: 30px;
   padding: 22px 0;
   background-color: #eaeff2;
   font-weight: 700;
@@ -161,6 +162,9 @@ body {
 .product {
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 3fr 1fr;
+  column-gap: 30px;
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(126, 155, 189, 0.3);
   font-weight: 600;
   font-size: 18px;
   line-height: 1.3;
@@ -181,6 +185,7 @@ body {
 .cart-footer {
   display: grid;
   grid-template-columns: 5fr 3fr 4fr;
+  column-gap: 30px;
   padding: 19px 0;
   background-color: #eaeff2;
   font-weight: 700;
