--- a/sass/blocks/_cart-footer.scss
+++ b/sass/blocks/_cart-footer.scss
@@ -1,6 +1,7 @@
 .cart-footer {
   display: grid;
   grid-template-columns: 5fr 3fr 4fr;
+  column-gap: 30px;
 
   padding: 19px 0;
   background-color: #eaeff2;
