--- a/sass/blocks/_product.scss
+++ b/sass/blocks/_product.scss
@@ -1,6 +1,10 @@
 .product {
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 3fr 1fr;
+  column-gap: 30px;
+
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(126, 155, 189, 0.3);
 
   font-weight: 600;
   font-size: 18px;
