--- a/sass/blocks/_product.scss
+++ b/sass/blocks/_product.scss
@@ -9,6 +9,13 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 1.3;
+
+  @media (max-width: $mobile) {
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(60px, auto);
+    column-gap: 15px;
+    row-gap: 10px;
+  }
 }
 
 // обращение к любому эдементу вложенности на первом уровне внутри product
@@ -18,12 +25,27 @@
 
 .product__img {
   justify-self: center;
+  @media (max-width: $mobile) {
+    grid-column: 1/3;
+    // С первой и занимает 3
+  }
 }
 .producr__title {
+  @media (max-width: $mobile) {
+    grid-column: 3/-1; //с 3 и до последней тоже самое что 3/7
+  }
 }
 .producr__count {
+  @media (max-width: $mobile) {
+    grid-column: 1/3;
+    justify-self: center;
+  }
 }
 .producr__price {
+  @media (max-width: $mobile) {
+    grid-column: 3/6;
+    justify-self: center;
+  }
 }
 .producr__controls {
   justify-self: center;
